# u-phy

./: .gitignore  CMakeLists.txt  CMakePresets.json  GSDML-V2.4-RT-Labs-U-Phy-Sample-20220825.xml  GSDML-V2.4-RT-Labs-U-Phy-Sample-20220921.xml  GSDML-V2.4-RT-Labs-U-Phy-Sample-20221005.xml  README.md  application.c  application.h  main.c
.github/: mistaken-pull-closer.yml
cmake/: Linux.cmake  UPhyModel.cmake  rt-kernel.cmake
models/: digio.json
pn_dev/: CMakeLists.txt  GSDML-V2.43-RT-Labs-P-Net-Sample-App-20240530.xml  sampleapp_common.c  sampleapp_common.h
pn_dev_lan9662/: CMakeLists.txt
ports/linux/: client.c  mono.c
ports/rt-kernel/: client.c  mono.c
ports/windows/: client.c  mono.c
src/: CMakeLists.txt  application.c
src/cmake/: Windows.cmake  rt-kernel.cmake
src/ports/linux/: client.c  mono.c
src/ports/rt-kernel/: client.c  mono.c
src/ports/windows/: client.c  mono.c
